--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-node_modules
-public
-.tmp
+node_modules/
+public/components
 .sass-cache
-.idea
-client/bower_components
-dist
-/server/config/local.env.js
-*.log
-.gitattributes
-.editorconfig
-.yo-rc.json
-coverage
