--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "blogv2",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "~4.2.0",
-    "glob": "~4.0.5",
-    "serve-favicon": "~2.0.1",
-    "morgan": "~1.1.1",
-    "cookie-parser": "~1.3.2",
-    "body-parser": "~1.4.3",
-    "compression": "~1.0.8",
-    "method-override": "~2.1.1",
-    "mongoose": "~3.8.12",
-    "jade": "~1.3.0"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-develop": "~0.4.0",
-    "load-grunt-tasks": "~0.6.0",
-    "request": "~2.36.0",
-    "time-grunt": "~0.3.2"
-  }
+    "name": "blogv2",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "express": "~4.2.0",
+        "glob": "~4.0.5",
+        "serve-favicon": "~2.0.1",
+        "morgan": "~1.1.1",
+        "cookie-parser": "~1.3.2",
+        "body-parser": "~1.4.3",
+        "compression": "~1.0.8",
+        "method-override": "~2.1.1",
+        "mongoose": "~3.8.12",
+        "jade": "~1.3.0"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.5",
+        "grunt-autoprefixer": "^1.0.1",
+        "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-compass": "~0.9.0",
+        "grunt-contrib-jade": "^0.13.0",
+        "grunt-contrib-sass": "^0.8.1",
+        "grunt-contrib-watch": "~0.6.1",
+        "grunt-develop": "~0.4.0",
+        "grunt-express-server": "^0.4.19",
+        "grunt-jade-usemin": "^0.8.0",
+        "grunt-open": "^0.2.3",
+        "load-grunt-tasks": "~0.6.0",
+        "request": "~2.36.0",
+        "time-grunt": "~0.3.2"
+    }
 }
