--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,12 @@
 {
-    "name": "blogv2",
-    "version": "0.0.1",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "components"
-    ]
+  "name": "blog",
+  "version": "0.0.1",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "components"
+  ],
+  "dependencies": {
+    "jquery": "~2.1.1"
+  }
 }
