--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "grunt-autoprefixer": "^1.0.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-jade": "^0.13.0",
     "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
     "grunt-express-server": "^0.4.19",
