--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "jquery.scrollTo": "~1.4.13",
+    "movejs": "https://raw.githubusercontent.com/visionmedia/move.js/0.3.3/move.min.js"
   }
 }
