Navigation bar fixed

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,10 @@
     "bootstrap": "~3.2.0",
     "lodash": "~2.4.1",
     "jquery.scrollTo": "~1.4.13",
-    "movejs": "https://raw.githubusercontent.com/visionmedia/move.js/0.3.3/move.min.js"
+    "movejs": "https://raw.githubusercontent.com/visionmedia/move.js/0.3.3/move.min.js",
+    "bootstrap-autohidingnavbar": "~1.0.0",
+    "toccajs": "https://raw.githubusercontent.com/GianlucaGuarini/Tocca.js/master/Tocca.min.js",
+    "scroll-up-bar": "~0.3.0",
+    "jquery.scrollmagic": "https://raw.githubusercontent.com/janpaepke/ScrollMagic/master/js/jquery.scrollmagic.min.js"
   }
 }
